# ZERO-Jetbot

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  command_set.bash
completed_scripts_jetbot/: apt_requirements.txt  package.xml  setup.cfg  setup.py
completed_scripts_jetbot/config/: amcl_params_real.yaml  amcl_params_sim.yaml  map_server_param.yaml  mapper_params_online_async.yaml  mapper_params_real.yaml  mapper_params_sim.yaml  mapping.yaml  nav_param.yaml  navigation_param_real.yaml  navigation_param_sim.yaml  realsense_config.yaml
completed_scripts_jetbot/config/navigation/: amcl_config.yaml  bt_navigator.yaml  controller.yaml
completed_scripts_jetbot/frames/: frames.gv
completed_scripts_jetbot/launch/: jetbot_sensors_and_motors.launch.py  load_map.launch.py  mapping.launch.py  meta.launch.py  navigation.launch.py  rviz_and_robot_description.launch.py
completed_scripts_jetbot/maps/: G210_with_boxes_map.pgm  G210_with_boxes_map.yaml  map.pgm  map.yaml
completed_scripts_jetbot/rviz/: pathplanning.rviz
docs/: Метаметодичка.docx  Полезные ссылки.xlsx
docs/Короткие_инструкции/: Граф_методичек.drawio
docs/Короткие_инструкции/docx/: .~Загрузка_на_ESP32_прошивки.docx  .~Как_запустить_режим_картографирования_для_реального_робота.docx  0_Загрузка_на_ESP32_прошивки.docx  0_Подключение_к_Jetson_Nano.docx  0_Развёртывание_репозитория_с_ПО_для_jetbot_mirea.docx  1_Создание_симлинка_для_ESP32.docx  2_Как_запустить_датчики_и_приводной_уровень_на_роботе_jetbot_mirea.docx  2_Как_настроить_ПИД_регуляторы.docx  3_Как_запустить_режим_картографирования_для_реального_робота.docx  3_Как_запустить_режим_картографирования_для_симуляции.docx  3_Управление_движением_jetbot_mirea_с_помощью_клавиатуры.docx  4_Как_запустить_режим_автономной_навигации_по_карте_для_реального_робота.docx  4_Как_запустить_режим_автономной_навигации_по_карте_для_симуляции.docx  A0_Подключение_к_Jetson_Nano.docx  A1_5_Настройка_OLED_дисплея.docx  A1_Развёртывание_репозитория_с_ПО_для_jetbot_mirea.docx  A2_1_Загрузка_на_ESP32_прошивки.docx  A2_2_Создание_симлинка_для_ESP32.docx  A3_симлинка_лидара_RPLidar.docx  R1_Как_запустить_датчики_и_приводной_уровень_на_роботе_jetbot_mirea.docx  R2_Управление_движением_jetbot_mirea_с_помощью_клавиатуры.docx  R3_Как_настроить_ПИД_регуляторы.docx  R4_Как_запустить_режим_картографирования_для_реального_робота.docx  R5_Как_запустить_режим_автономной_навигации_по_карте_для_реального_робота.docx  S1_Как_запустить_симуляцию.docx  S2_Как_запустить_режим_картографирования_для_симуляции.docx  S3_Как_запустить_режим_автономной_навигации_по_карте_для_симуляции.docx
docs/Справочная_инфомация/: 1_Техничка.docx  3_Доп_ПО.docx
docs/Справочная_информация/: 2_jetbot_drivers.docx  3_Доп_ПО.docx
docs/Схемы/: .$Монтажная_схема_jetbot_mirea.drawio.bkp  .$Монтажная_схема_jetbot_ориг.drawio.bkp  .$Структурная_схема.drawio.bkp  Монтажная_схема_jetbot_mirea.drawio  Монтажная_схема_jetbot_ориг.drawio  Протокол связи c ESP32.drawio  Структурная_схема.drawio
esp_firmware/: README.md
esp_firmware/esp32_firmware/: 01_interraptions.ino  02_motor_control.ino  03_protocol_msgs_send.ino  esp32_firmware.ino
init_scripts/: REAMDE.md  install_dependensies_host.bash  install_dependensies_jetbot.bash  install_deps.bash
init_scripts/jetbot_stats/: create_service.bash  init_service.bash  jetbot_stats.py  jetbot_telemetria.timer
jetbot_mirea_description/: CMakeLists.txt  apt_requirements.txt  jetbot_mirea_description_model_path.sh.in  package.xml
jetbot_mirea_description/blender/: G210_Polygon.blend
jetbot_mirea_description/launch/: gazebo.launch.py  jetbot_mirea_rviz.launch.py  real_robot.launch.py
jetbot_mirea_description/meshes/: marvelmind_miniRX.stl
jetbot_mirea_description/models/G210_polygon/: model.config  model.sdf
jetbot_mirea_description/models/G210_polygon/meshes/: G210_polygon.dae
jetbot_mirea_description/models/minibox/: model.config  model.sdf
jetbot_mirea_description/rviz/: gazebo_set.rviz  gazebo_set_G210.rviz  load_map.rviz  real_set.rviz  urdf.rviz  visualization.rviz
jetbot_mirea_description/urdf/: _d435.urdf.xacro  _usb_plug.urdf.xacro  common_properties.xacro  gazebo_properties.xacro  jetbot_mirea_detalied.urdf.xacro  jetbot_mirea_simple_gazebo.urdf.xacro  jetbot_mirea_simple_gazebo_ideal.urdf.xacro  jetbot_mirea_simple_gazebo_real.urdf.xacro
jetbot_mirea_description/urdf/backup/: jetbot_mirea_simple.urdf.xacro
jetbot_mirea_description/world/: simple_labirint.world
jetbot_mirea_description/worlds/: G210.sdf  G210.world  G210_with_boxes.world  simple_labirint.world
lidar_filter/: LICENSE  package.xml  setup.py
lidar_filter/launch/: filter.launch.py
lidar_filter/lidar_filter/: lidar_filter.py
realsense_pkg/: apt_requirements.txt  package.xml  setup.cfg  setup.py
realsense_pkg/config/: jetbot_set.yaml
realsense_pkg/launch/: bringup.launch.py
realsense_ros_gazebo/: CHANGELOG.md  link_to_vendor
realsense_ros_gazebo/xacro/: depthcam.xacro
serial_bridge_package/: README.md  package.xml  setup.cfg  setup.py
serial_bridge_package/launch/: serial_bringup.launch.py
serial_bridge_package/rviz/: show_all_stats.rviz
serial_bridge_package/scripts/: create_udev_rules.sh  delete_udev_rules.sh  esp32.rules
serial_bridge_package/serial_bridge_package/: feedback_processor.py  serial_bridge_node.py  twist_to_command.py
simple_PID_configutaror/: README.md  config.py  determine_esp32.bash  fast_gui.py  pip_requirements.txt
sllidar_ros2/: link_to_github_of_vendor
sllidar_ros2/scripts/: create_udev_rules.sh
teleop_jetbot/: LICENSE  README.md  package.xml  setup.cfg  setup.py  teleop_keyboard.py  teleop_pc.launch.py  teleop_robot.launch.py
teleop_jetbot/launch/: teleop_pc.launch.py  teleop_robot.launch.py
teleop_jetbot/teleop_jetbot/: teleop_keyboard.py
trajectory_maker/: LICENSE  README.md  apt_requirements.txt  package.xml  setup.cfg  setup.py
trajectory_maker/trajectory_maker/: start_move_action.py  start_move_topic.py
