<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>completed_scripts_jetbot</name>
  <version>1.0.0</version>
  <description>This package include launch-files, what state the full system of jetbot from one click</description>
  <maintainer email="sashagrachev2005@gmail.com">banana-killer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>realsense2-camera</exec_depend>
  <exec_depend>slam-toolbox</exec_depend>
  <exec_depend>tf2-ros</exec_depend>
  <exec_depend>nav2-map-server</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2-bringup</exec_depend>

  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>serial_bridge_package</exec_depend>
  <exec_depend>jetbot_mirea_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
